# group_combination

./: .gitignore  README.md  group_count_assignment.py  main.py  setup.cfg
src/group_combination/: main.py
