[metadata]
name = group_combination
author = Antoine Laborde
author_email = lab.antoine@gmail.com
description =
keywords =
classifiers =
    Programming Language :: Python :: 3.9

[bdist_wheel]
universal = 1

[options]
zip_safe = True
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[tool:pytest]
testpaths =
    tests
addopts = --cov=portfolio_dashboard --cov-report html
